[BankingAPI][v1.2.5]     - Changing status to string ("active" or "blocked")     - Adapting code to adhere to status changes     - Changing to more RESTful compliant endpoint for blocking clients, users, and accounts
