# docs/swagger.yaml
@@ -481,7 +481,7 @@ paths:
         "500":
           description: Internal Server Error
 
-  /accounts/report/{account_id}:
+  /accounts/{account_id}/report:
     get:
       tags:
         - accounts
@@ -831,148 +831,200 @@ components:
       properties:
         user_id:
           type: string
+          description: Identifier of the user in the system. In POST operation it will not be used to assign the ID to the user, but to return the user ID generated by the system.
         name:
           type: string
+          description: Max lenght of 30 characters
         document:
           type: string
+          description: Document of the user, must be CNPJ, and of 14 digits (will be validated)
         password:
           type: string
+          description: User's password to be used for authentication, must not be null
         register_date:
           type: string
           format: date-time
+          description: Date when the user was registered in the system, in POST, it is not necessary to be passed, if passed won't be used (RFC3339 format)
         status:
-          type: boolean
+          type: string
+          description: Value indicating if the user is active or not, on POST, default is "active" (possible values "blocked", "active")
     Client:
       type: object
       properties:
         client_id:
           type: string
+          description: Identifier of the client in the system. In POST operation it will not be used to assign the ID to the client, but to return the client ID generated by the system.
         user_id:
           type: string
+          description: ID of the user that owns the client, mus not be null, and it's existence be will validated
         name:
           type: string
+          description: Max lenght of 30 characters
         document:
           type: string
+          description: Document of the client, must be CPF, and of 11 digits (will be validated)
         register_date:
           type: string
           format: date-time
+          description: Date when the client was registered in the system, in POST, it is not necessary, if passed won't be used (RFC3339 format)
         status:
-          type: boolean
+          type: string
+          description: Value indicating if the client is active or not, on POST, default is "active" (possible values "blocked", "active")
     Account:
       type: object
       properties:
         account_id:
           type: string
+          description: Identifier of the account in the system. In POST operation it will not be used to assign the ID to the account, but to return the account ID generated by the system.
         client_id:
           type: string
+          description: ID of the client that owns the account, must not be null, and it's existence will be validated 
         user_id:
           type: string
+          description: ID of the user that owns the client, must not be null, it's existence will be verified
         agency_id:
           type: integer
           format: uint32
+          description: Identifier of the corresponding agency where the account is based, must not be null 
         register_date:
           type: string
           format: date-time
+          description: Date when tha account was registered, generated in the system, won't be used if passed (RFC3339 format)
         balance:
           type: number
           format: float64
+          description: Balance of the account, on POST, do not pass this parameter. If passed will be ignored and set to 0.0 
         status:
-          type: boolean
+          type: string
+          description: Value indicating if the account is active or not, on POST, default is "active" (possible values "blocked", "active")
     Transfer:
       type: object
       properties:
         transfer_id:
           type: string
+          description: Identifier of the transfer in the system. In POST, the system will generate this ID and return, if passed wont't be used!
         account_id:
           type: string
+          description: ID of the account that is sending the transfer, must not be null, and it's existence will be validated
         account_to:
           type: string
+          description: ID of the account that is receiving the transfer ,must not be null, and it's existence will be validated
         value:
           type: number
           format: float64
+          description: Ammount of money to be transfered, must not be null, 0.0 or negative. The account_id will be verified of the value's existence in it's balance.
         register_date:
           type: string
           format: date-time
+          description: Date when the transfer was registered, generated in the system, wont't be used if passed. (RFC3339 format)
     Deposit:
       type: object
       properties:
         deposit_id:
           type: string
+          description: Identifier of the deposit in the system. In POST, the system will return this value, if passed, won't be used!
         account_id:
           type: string
+          description: ID of the account that is receiving the deposit, must not be null, and it's existence will be validated
         client_id:
           type: string
+          description: ID of the client that owns the account, must not be null, and it's existence, status and equality to the account registered clientID will be verified
         user_id:
           type: string
+          description: ID of the user that owns the client, must not be null, and it's existence will be validated, as well as it's ownership of the client
         agency_id:
           type: integer
           format: uint32
+          description: ID of the agency where the account is based, must not be null and will be verified in deposit process
         deposit:
           type: number
           format: float64
+          description: Ammount of money to be deposited, must not be null, 0.0 or negative. 
         deposit_date:
           type: string
           format: date-time
+          description: Date when the deposit was registered, generated in the system and will be returned, if passed won't be used! (RFC3339 format)
     Withdrawal:
       type: object
       properties:
         withdrawal_id:
           type: string
+          description: Identifier of the withdrawal in the system. In POST, the system will generate and return this ID, if passed won't be used!
         account_id:
           type: string
+          description: ID of the account that is having the ammount withdrawn, must not be null and will be validated
         client_id:
           type: string
+          description: ID of the client that owns the account, must not be null, and it's existence, status and equality to the account registered clientID will be validated
         agency_id:
           type: integer
           format: uint32
+          description: ID of the agency where the account is based, must not be null, and will be validated in withdrawal processs
         withdrawal:
           type: number
           format: float64
+          description: Ammount of money to be withdrawn, must not be null, 0.0 or negative. The account with account_id will be verified of the existence of this value in it's balance
         withdrawal_date:
           type: string
           format: date-time
+          description: Date when the withdrawal was registered, generated in the system, wont'be used if passed! (RFC3339 format)
         status:
           type: boolean
+          description: Value indicating if the withdrawal was succesfull or not, will be set on POST and never changed
     AutomaticDebit:
       type: object
       properties:
         debit_id:
           type: string
+          description: Identifier of the automatic debit in the system. In POST, the system will generate and return this ID, if passed won't be used!
         account_id:
           type: string
+          description: ID of the account that is having the automatic debit, must not be null, and it's existence will be validated!
         client_id:
           type: string
+          description: ID of the client that owns the account, must not be null, and it's existence, status and equality to the account registered clientID will be validated
         agency_id:
           type: integer
           format: uint32
+          description: ID of the agency where the account is based, muts not be null, and will be validated in automatic debit process
         value:
           type: number
           format: float64
+          description: Ammount of money to be debited, must not be null, 0.0 or negative. The account with account_id, will be verified of the existence of this value in it's balance upon debit 
         debit_day:
           type: integer
           format: uint16
+          description: Day of the month when the debit will be made, must not be null, and must be between 1 and 31
         status:
           type: boolean
+          description: Value indicating if the automatic debit is active or not, in POST, will be set for true
         expiration_date:
           type: string
           format: date-time
+          description: Date when the automatic debit will be expired, must not be null, and will be validated in automatic debit process or checking (format 2006-01-02T15:04:05+07:00 (RFC3339)))
         register_date:
           type: string
           format: date-time
+          description: Date whant the automatic debit was registered, generated in the system, wont't be used if passed in POST (RFC3339 format)
     UserReport:
       type: object
       properties:
         user_id:
           type: string
+          description: Identifier of the user in the system
         name:
           type: string
+          description: Name of the user, will be returned
         document:
           type: string
+          description: Document of the user, will be returned
         register_date:
           type: string
           format: date-time
+          description: Date when the user was registered in the system, will be returned (RFC3339 format)
         status:
           type: boolean
+          description: Value indicating if the user is active or not
         clients:
           type: array
           items:
@@ -980,22 +1032,29 @@ components:
         report_date:
           type: string
           format: date-time
+          description: Date when the report was generated (RFC3339 format)
     ClientReport:
       type: object
       properties:
         client_id:
           type: string
+          description: Identifier of the client in the system, the report is referrering to this client
         user_id:
           type: string
+          description: ID of the user that owns the client
         name:
           type: string
+          description: Name of the client
         document:
           type: string
+          description: Document of the client
         register_date:
           type: string
           format: date-time
+          description: Date when the client was registered in the system (RFC3339 format)
         status:
           type: boolean
+          description: Value indicating if the client is active or not
         accounts:
           type: array
           items:
@@ -1003,24 +1062,31 @@ components:
         report_date:
           type: string
           format: date-time
+          description: Date when the report was generated (RFC3339 format)
     AccountReport:
       type: object
       properties:
         account_id:
           type: string
+          description: The ID of the account which the report is referring to
         client_id:
           type: string
+          description: ID of the client that owns the account
         agency_id:
           type: integer
           format: uint32
+          description: ID the agency where the account is based
         balance:
           type: number
           format: float64
+          description: Balance of the account, ammount of money in the account
         register_date:
           type: string
           format: date-time
+          description: Date when the account was registered in the system (RFC3339 format)
         status:
           type: boolean
+          description: Value indicating if the account is active or not
         transfers:
           type: array
           items:
@@ -1040,3 +1106,4 @@ components:
         report_date:
           type: string
           format: date-time
+          description: Date when the report was generated (RFC3339 format)
